linechart/public/assets/css/dropdown.css
/************************************************/
/* *******  HEADER BOTH LEFT AND RIGHT  ******* */
/************************************************/

.headerCol {
  margin: 0px;
  padding: 0px;
  background-color: #44adef;
}

/*********************************/
/* *******  HEADER LEFT  ******* */
/*********************************/

.headerSymbol {
  position: relative;
  background-color: #44adef;
  font-family: sans-serif;
  /*padding-bottom: 80/2;*/
  /*padding-top: 25px;*/
  padding-left: 20px;
  margin: 0px;
  /*padding-top: 30px;*/
  /*font-size: 25px;*/
}
/*
.headerInput {
  background-color: #44adef;
  font-family: sans-serif;
  padding-bottom: 20px;
  padding-top: 23px;
  padding-left: 20px;
  margin: 0px;
  padding-top: 30px;
  font-size: 25px;
}*/

/**********************************/
/* *******  HEADER RIGHT  ******* */
/**********************************/

/* container */
.symbolBar {
  /*  margin-left: 50px;
  margin-right: 50px;*/
  /*margin: 0;*/
  /*padding: 0;*/

  /*font-size: 20px;*/
}

/**************************************/
/* *******  Exchange Dropdown ******* */
/**************************************/

/* exchange container */
.exchangeDropdownContainer {
  /*padding-top: 25px;*/
  /*background-color: #44adef;*/
  /*margin: 0 auto; */
  /*float: none;*/
  display: flex;
  align-items: center;
  /*background-color: white;*/
  /*height: 110px;*/
  justify-content: center;
  /*height: 105px;*/
  flex-direction: column;
  /*width: 200px;*/
}

.innerDropdownContainer {
  /*width: 100%;*/
  /*background-color: white;*/
  /*width: 20px;*/
  /*height: 50px;*/
  /*max-width: 50%;*/
  display: flex;
  align-items: left;
  /*background-color: white;*/
  /*height: 110px;*/
  justify-content: center;
  flex-direction: column;
}

/* currently selected exchange */
.currentExchange {
}

.currentExchange:hover {
  color: white;
  cursor: pointer;
  font-weight: bold;
}

/* ul exchange dropdown list */
.exchangeList {
  /*position: relative;*/
  list-style-type: none;
  color: black;
  z-index: 1;
  /*background-color: #44adef;*/
  background-color: white;
  border: solid 2px #44adef;
  border-radius: 6px;
  /*padding: 0;*/
  /*margin: 0 auto;*/
}

/* li each item in exchange dropwdown list */
.dropdownItem {
  /*  padding: 0;
  margin-top: 0;*/
  cursor: pointer;
  text-align: left;
}

.dropdownItem:hover {
  background-color: lightgrey;
  opacity: 1;
}

/**************************************/
/* *******  Symbol Input ************ */
/**************************************/

/* container for symbol input and it's dropdown  */
.symbolInput {
  /*  margin-left: 50px;
  margin-right: 50px;*/
  width: 110px;
  z-index: 1;
  /*margin: 0 auto;*/
  /*border-bottom: solid 1.5px;*/
}

/*.symbolInput:hover {*/
/*color: white;*/
/*border-bottom: solid white 1.5px;*/
/*}*/

/* symbol input */
#input {
  /*text-align: left;*/
  width: 110px;
  /*font-size: 20px;*/
  border: none;
  /*color: black;*/
  background-color: #44adef;
  /*border-bottom: 5px solid;*/
  /*text-align: center;*/
  z-index: 1;
  text-transform: uppercase;
}

#input:hover {
  /*color: white;*/
  cursor: pointer;
  font-weight: bold;
}

/* change color of symbol input on hover */
/*.symbolInput:hover {
  color: white;
}*/

/* removes border around input when its clicked to enter text into it */
#input:focus {
  outline: none;
}

/* symbol input placeholder */
#input::placeholder {
  color: black;
}

/* change color of input placeholder on hovr */
#input:hover::placeholder {
  color: white;
}

/* ul symbol dropdown */
.symbolList {
  position: absolute;
  list-style-type: none;
  margin: 0;
  padding: 0;
  z-index: 1;
  background-color: white;
  overflow: auto;
  width: 116px;
  transform: translate(-3px, -4px);

  /*
  position: absolute;
  list-style-type: none;
  color: black;
  z-index: 1;
  background-color: #44adef;
  background-color: white;
  border: solid 2px #44adef;
  border-radius: 6px;
  padding: 0;
  width: 125px;*/
}

/* li in ul symbol dropdown */
.symbol {
  color: black;
  /*margin: 5px;*/
  /*font-size: 18px;*/
  z-index: 1;
  position: relative;
  text-decoration: none;
  cursor: pointer;
  /*text-align: left;*/
}

/*.selectedSymbol:hover {
  text-decoration: none;
  color: white;
}*/

/* li symbol on hover */
.symbol:hover {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

/* interval dropdown */
.interval {
  /*  margin-left: 50px;
  margin-right: 50px;*/
  /*width: 400px;*/
  /*font-size: 20px;*/
  /*z-index: 1;*/
  /*margin: 0 auto;*/
}

.interval:hover {
  cursor: pointer;
  font-weight: bold;
}

/* submit button */
.submit {
  /*  margin-left: 50px;
  margin-right: 50px;*/
  color: black;
  /*margin: 0 auto;*/
  border: 1px solid black;
  border-radius: 10px;
  background-color: #44adef;
  /*font-size: 5px;*/
}

/*change submit button color on hover*/
.submit:hover {
  color: #44adef;
  font-weight: bold;
  background-color: white;
}

/***************************/
/* *******  CHART  ******* */
/***************************/

.chartCol {
  margin: 0px;
  padding: 0px;
}

.white {
  font-color: white;
}

/***********************************/
/* *******  MEDIA QUERIES  ******* */
/***********************************/

@media (min-width: 0px) {
  .headerSymbol {
    font-size: 17px;
  }

  #input {
    font-size: 15px;
  }
  .symbol {
    font-size: 15px;
  }
  .exchangeDropdownContainer {
    font-size: 15px;
  }
  .submit {
    font-size: 15px;
    width: 70px;
    padding: 3px;
  }

  .symbolInput {
    width: 80px;
  }

  .headerCol {
    float: left;
  }
}

/* Small devices (landscape phones, 576px and up) */
@media (min-width: 576px) {
  .headerSymbol {
    font-size: 17px;
  }

  #input {
    font-size: 15px;
  }

  .symbol {
    font-size: 15px;
  }
  .exchangeDropdownContainer {
    font-size: 15px;
  }
  .submit {
    font-size: 15px;
    width: 70px;
    padding: 3px;
  }
}

/* Medium devices (tablets, 768px and up) */
@media (min-width: 768px) {
  .fixedHeight {
    height: 80px;
  }

  .headerSymbol {
    font-size: 25px;
  }

  #input {
    font-size: 17px;
  }

  .symbol {
    font-size: 17px;
  }

  .exchangeDropdownContainer {
    font-size: 17px;
  }

  .submit {
    font-size: 17px;
  }
}

/* Large devices (desktops, 992px and up) */
@media (min-width: 992px) {
  .headerSymbol {
    font-size: 25px;
  }

  #input {
    font-size: 17px;
  }

  .symbol {
    font-size: 17px;
  }

  .exchangeDropdownContainer {
    font-size: 17px;
  }
  .submit {
    font-size: 17px;
  }
}

/* Extra large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {
  .headerSymbol {
    font-size: 25px;
  }

  #input {
    font-size: 17px;
  }

  .symbol {
    font-size: 17px;
  }

  .exchangeDropdownContainer {
    font-size: 17px;
  }
  .submit {
    font-size: 17px;
  }
}

.formInlineExchangesDropdown {
  background-color: #44adef;
}

.chart {
  position: absolute;
  z-index: 1;
}

